--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,16 +1,16 @@
 .intro {
   margin: 0 auto;
-  padding: 0 16px 64px 16px;;
+  padding: 0 16px 64px 16px;
   max-width: 984px;
   -webkit-font-smoothing: antialiased;
 }
-  
+
 @media screen and (min-width: 768px) {
   .intro {
     padding: 0 24px 88px 24px;
   }
 }
-  
+
 @media screen and (min-width: 1024px) {
   .intro {
     padding: 0 48px 92px 48px;
