--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,20 +1,30 @@
 .cover__subtitle {
+  max-width: 288px;
+  margin: 16px auto 33px auto;
+  padding: 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 14px;
+  line-height: 16px;
   text-align: center;
   color: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto;
-  z-index: 2;
 }
-  
-@media screen and (max-width: 767px) {
+
+@media screen and (min-width: 768px) {
   .cover__subtitle {
-    font-size: 14px;
-    line-height: 16px;
-    max-width: 288px;
+    max-width: 360px;
+    margin: 32px auto 115px auto;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__subtitle {
+    max-width: 360px;
+    margin: 32px auto 245px auto;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
