--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,21 +1,39 @@
 .cover__title {
+  max-width: 288px;
+  margin: 33px auto 0 auto;
+  padding: 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
+  font-size: 32px;
+  line-height: 35px;
   text-align: center;
   color: #FFFFFF;
-  max-width: 560px;
-  margin: 0 auto 32px auto;
-  position: relative;
-  z-index: 2;
 }
   
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .cover__title {
-    font-size: 32px;
-    line-height: 35px;
-    max-width: 288px;
+    max-width: 560px;
+    margin: 115px auto 0 auto;
+    font-size: 72px;
+    line-height: 76px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__title {
+    max-width: 560px;
+    margin: 195px auto 0 auto;
+    font-size: 72px;
+    line-height: 76px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__title {
+    max-width: 560px;
+    margin: 245px auto 0 auto;
+    font-size: 72px;
+    line-height: 76px;
   }
 }
