--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,32 +1,49 @@
 .cover {
-  position: relative;
-  margin: 0 auto;
-  padding: 0 48px;
-  width: 1184px;
-  height: 740px;
-  -webkit-font-smoothing: antialiased;
+position: relative;
+margin: 66px 0 0 0;
+padding: 0;
+display: flex;
+flex-direction: column;
+justify-content: center;
+background-image: url(../../images/cover-trains.jpg);
+background-size: cover;
+background-position: center;
+z-index: 1;
 }
 
-@media screen and (max-width: 425px) {
+.cover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  background-color: #000;
+  opacity: 0.3;
+  transition: opacity 350ms ease;
+}
+
+.cover:hover::before {
+  opacity: 0.8;
+}
+
+@media screen and (min-width: 768px) {
   .cover {
-    width: 100%;
-    max-height: 200px;
-    padding: 0;
+    margin: 90px 0 0 0;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 1024px) {
   .cover {
-    width: 100%;
-    max-height: 480px;
-    padding: 0;
+    margin: 92px 0 0 0;
   }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1079px) {
+@media screen and (min-width: 1280px) {
   .cover {
-    width: 100%;
-    max-height: 640px;
-    padding: 0;
+    margin: 92px 48px 0 48px;
+    max-width: 1184px;
+    height: 740px;
   }
 }
