--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -3,16 +3,17 @@
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 16px;
-  text-align: right;
+  line-height: 14px;
   color: #FFFFFF;
-  margin: 0;
+  margin: 48px 0 0 0;
+  padding: 0;
 }
   
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .footer__author{
     font-size: 14px;
-    line-height: 14px;
-    margin-top: 48px;
+    line-height: 16px;
+    margin: 0;
+    padding: 0;
   }
 }
