--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,9 +1,24 @@
 .footer__link {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 24px;
   color: #FFFFFF;
+  text-align: left;
+  margin: 0;
+  padding: 0;
   text-decoration: none;
   transition: opacity 0.3s ease;
 }
   
 .footer__link:hover {
   opacity: 0.8;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__link {
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
