--- a/blocks/footer/__list-item/footer__list-item.css
+++ b/blocks/footer/__list-item/footer__list-item.css
@@ -1,17 +1,21 @@
 .footer__list-item {
-  margin-right: 18px;
+  margin: 0;
+  padding: 0 0 32px 0;
 }
-  
+
 .footer__list-item:last-of-type {
-  margin-right: 0;
+  padding-bottom: 0;
 }
-  
-@media screen and (max-width: 767px) {
+
+@media screen and (min-width: 768px) {
   .footer__list-item {
-    margin-bottom: 32px;
-    margin-right: 0;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-right: 18px;
+    padding-bottom: 0;
   }
+
   .footer__list-item:last-of-type {
-    margin-bottom: 0;
+    padding-right: 0;
   }
 }
