--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,20 +1,15 @@
 .footer__list {
   display: flex;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 18px;
-  color: #FFFFFF;
+  flex-direction: column;
+  justify-content: flex-start;
   margin: 0;
   padding: 0;
   list-style: none;
 }
-  
-@media screen and (max-width: 767px) {
+
+@media screen and (min-width: 768px) {
   .footer__list {
-    font-size: 24px;
-    line-height: 24px;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: flex-start;
   }
 }
