--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,23 +1,35 @@
 .footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  margin: 64px auto 24px 16px;
+  padding: 0;
   background-color: #2A2C2F;
-  max-width: 1184px;
-  margin: 92px 48px 24px 48px;
+  display: flex;
+  flex-direction: column;
   -webkit-font-smoothing: antialiased;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .footer {
-    margin: 64px 118px 24px 16px;
-    flex-direction: column;
-    align-items: flex-start;
+    margin: 88px 24px 24px 24px;
+    padding: 0;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 1024px) {
   .footer {
-    margin: 88px 24px 24px 24px;
+    margin: 92px 48px 24px 48px;
+    padding: 0;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    margin: 92px 48px 24px 48px;
+    padding: 0;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
