--- a/blocks/header/__lang-item/header__lang-item.css
+++ b/blocks/header/__lang-item/header__lang-item.css
@@ -1,7 +1,15 @@
 .header__lang-item {
-  margin-right: 18px;
+  margin: 0 18px 0 0;
+  padding: 0;
+  max-width: 22px;
 }
   
 .header__lang-item:last-of-type {
   margin-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .header__lang-item {
+    max-width: 30px;
+  }
 }
