--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,6 +1,15 @@
 .header__lang-links {
   display: flex;
-  margin: 0;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin: 14px 0 8px auto;
   padding: 0;
   list-style: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header__lang-links {
+    margin-top: 18px;
+    margin-bottom: 6px;
+  }
 }
