--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,7 +1,9 @@
 .header__logo {
-  object-fit: cover;
+  object-fit: contain;
   width: 142px;
   height: 42px;
+  margin: 0;
+  padding: 0;
 }
   
 @media screen and (min-width: 768px) {
