--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,8 @@
 .header {
-  max-width: 1184px;
-  margin: 0 auto;
+  margin: 0;
   padding: 16px 16px 48px 16px;
   background-color: #2A2C2F;
+  font-family: 'Inter', sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,7 +17,7 @@
   
 @media screen and (min-width: 1024px) {
   .header {
-    padding-bottom: 28px 48px 48px 48px;
+    padding: 28px 48px 48px 48px;
   }
 }
 
