--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,16 +4,16 @@
   font-weight: 900;
   font-size: 32px;
   line-height: 35px;
+  text-align: left;
   color: #FFFFFF;
-  max-width: 720px;
-  margin: 0 16px 40px 0;
+  margin: 0;
+  padding: 0;
 }
   
 @media screen and (min-width: 768px) {
   .intro__title {
     font-size: 54px;
     line-height: 58px;
-    margin: 0 0px 40px 0;
   }
 }
 
@@ -21,8 +21,6 @@
   .intro__title {
     font-size: 54px;
     line-height: 58px;
-    margin: 0 0px 40px 0;
-    max-width: 690px;
   }
 }
 
@@ -30,7 +28,5 @@
   .intro__title {
     font-size: 54px;
     line-height: 58px;
-    margin: 0 0px 40px 0;
-    max-width: 690px;
   }
 }
