--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,9 @@
 .intro {
-  margin: 0 auto;
+  margin: 0;
   padding: 0 16px 64px 16px;
-  max-width: 984px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -13,7 +15,7 @@
 
 @media screen and (min-width: 1024px) {
   .intro {
-    padding: 0 48px 92px 48px;
+    padding: 0 286px 92px 48px;
   }
 }
 
