--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,24 @@
 .lead__image {
   width: 100%;
+  margin: 40px 0 6px 0;
+  padding: 0;
+  object-fit: contain;
+}
+
+@media screen and (min-width: 768px) {
+  .lead__image {
+    margin-top: 56px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .lead__image {
+    margin-top: 56px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead__image {
+    margin-top: 64px;
+  }
 }
