--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,19 +1,20 @@
 .lead__subtitle {
-  max-width: 640px;
-  margin: 0 16px 40px 16px;
+  max-width: 288px;
+  margin: 16px auto 0 auto;
+  padding: 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
-  align-self: center;
   color: #FFFFFF;
+  -webkit-font-smoothing: antialiased;
 }
   
 @media screen and (min-width: 768px) {
   .lead__subtitle {
-    margin: 0 64px 56px 64px;
+    margin-top: 32px;
     max-width: 640px;
     font-size: 30px;
     line-height: 36px;
@@ -22,7 +23,7 @@
 
 @media screen and (min-width: 1024px) {
   .lead__subtitle {
-    margin: 0 144px 56px 144px;
+    margin-top: 32px;
     max-width: 640px;
     font-size: 30px;
     line-height: 36px;
@@ -31,7 +32,7 @@
 
 @media screen and (min-width: 1280px) {
   .lead__subtitle {
-    margin: 0 172px 64px 172px;
+    margin-top: 32px;
     max-width: 640px;
     font-size: 30px;
     line-height: 36px;
