--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,19 +1,19 @@
 .lead__title {
-  max-width: 720px;
-  margin: 0 16px 16px 16px;
+  max-width: 288px;
+  margin: 0 auto 0 auto;
+  padding: 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   font-size: 40px;
   line-height: 44px;
   text-align: center;
-  align-self: center;
   color: #FFFFFF;
+  -webkit-font-smoothing: antialiased;
 }
   
 @media screen and (min-width: 768px) {
   .lead__title {
-    margin: 0 24px 32px 24px;
     font-size: 96px;
     line-height: 100px;
     max-width: 720px;
@@ -22,7 +22,6 @@
 
 @media screen and (min-width: 1024px) {
   .lead__title {
-    margin: 0 24px 32px 24px;
     font-size: 96px;
     line-height: 100px;
     max-width: 720px;
@@ -31,7 +30,6 @@
 
 @media screen and (min-width: 1280px) {
   .lead__title {
-    margin: 0 132px 32px 132px;
     font-size: 96px;
     line-height: 100px;
     max-width: 720px;
