--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,30 +2,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-sizing: border-box;
-  max-width: 984px;
-  margin: 0 auto;
-  padding-bottom: 64px;
-  -webkit-font-smoothing: antialiased;
+  background: #2A2C2F;
+  margin: 0;
+  padding: 0 0 64px 0;
 }
   
 @media screen and (min-width: 768px) {
   .lead {
-    padding-bottom: 88px;
-    max-width: 768px;
+    padding: 0 0 88px 0;
   }
 }
   
 @media screen and (min-width: 1024px) {
   .lead {
-    padding-bottom: 92px;
-    max-width: 928px;
+    padding: 0 48px 92px 48px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .lead {
-    padding-bottom: 92px;
-    max-width: 984px;
+    padding: 0 148px 92px 148px;
   }
 }
