--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,16 +2,31 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
-  margin: 0;
+  margin: 32px 16px 25px 16px;
   padding: 0px;
 }
-  
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.place__paragraph:nth-of-type(2) {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) {
   .place__paragraph {
-    font-size: 16px;
+    margin: 0 0 25px 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__paragraph {
+    margin: 0 0 27px 0;
+    font-size: 18px;
     line-height: 163%;
   }
 }
