--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,13 +1,5 @@
-.place__paragraphs {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: min-content;
-  gap: 26px;
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .place__paragraphs {
-    margin: 0 16px;
-    gap: 25px;
+    grid-area: paragraphs;
   }
 }
