--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,6 @@
 .place__url-heading {
+  margin: 0 0 12px 0;
+  padding: 0;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
@@ -7,18 +9,18 @@
   letter-spacing: 2px;
   color: #AAAAAA;
   text-transform: uppercase;
-  margin: 0 0 12px 0;
-  padding: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .place__url-heading {
-    line-height: 12px;
+    font-size: 12px;
+    line-height: 20px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 1280px) {
   .place__url-heading {
-    line-height: 12px;
+    font-size: 12px;
+    line-height: 20px;
   }
 }
