--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,9 +1,16 @@
 .place__website {
-  align-self: end;
+  min-width: 288px;
+  min-height: 46px;
+  margin: 0 16px 32px 16px;
+  padding: 0;
 }
   
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .place__website {
-    margin: 0 16px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    grid-area: "place__url-heading";
   }
 }
