--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,8 +1,6 @@
 .root {
-  min-width: 320px;
-  max-width: 1280px;
-  width: 100%;
-  margin: auto;
+  margin: 0;
+  padding: 0;
   font-family: 'Inter', sans-serif;
   background-color: #2A2C2F;
 }
