--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,5 @@
 .place {
-  margin: 0;
+  margin: 50px 0 0 0;
   padding: 0;
   display: grid;
   -webkit-font-smoothing: antialiased;
@@ -7,6 +7,7 @@
   
 @media screen and (min-width: 768px) {
   .place {
+    margin-top: 73px;
     display: grid;
     grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
     grid-template-columns: minmax(340px, 1fr) minmax(352px, 1fr);
@@ -19,6 +20,7 @@
   
 @media screen and (min-width: 1024px) {
   .place {
+    margin-top: 80px;
     display: grid;
     grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
     grid-template-columns: minmax(440px, 1fr) minmax(456px, 1fr);
@@ -31,9 +33,10 @@
 
 @media screen and (min-width: 1280px) {
   .place {
+    margin-top: 80px;
     display: grid;
     grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
-    grid-template-columns: minmax(440px, 1fr) minmax(456px, 1fr);
+    grid-template-columns: minmax(460px, 1fr) minmax(456px, 1fr);
     gap: 48px 40px;
     grid-template-areas:
     "title website"
