--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,11 @@
   min-width: 320px;
   margin: 0 auto 0 auto;
   padding: 0;
+  font-family: 'Inter', 'Arial', sans-serif;
   background-color: #2A2C2F;
+  color: #FFFFFF;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
     
 @media screen and (min-width: 768px) {
