--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
-  max-width: 288px;
-  margin: 16px auto 33px auto;
+  position: relative;
+  margin: 16px auto 0 auto;
   padding: 0;
   font-family: 'Inter';
   font-style: normal;
@@ -14,14 +14,8 @@
 @media screen and (min-width: 768px) {
   .cover__subtitle {
     max-width: 360px;
-    margin: 32px auto 115px auto;
+    margin: 32px auto 0 auto;
     font-size: 18px;
     line-height: 22px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .cover__subtitle {
-    margin: 32px auto 245px auto;
   }
 }
