--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
-  max-width: 288px;
-  margin: 33px auto 0 auto;
+  position: relative;
+  margin: 0;
   padding: 0;
   font-family: 'Inter';
   font-style: normal;
@@ -14,20 +14,8 @@
 @media screen and (min-width: 768px) {
   .cover__title {
     max-width: 560px;
-    margin: 115px auto 0 auto;
+    margin: 0 auto 0 auto;
     font-size: 72px;
     line-height: 76px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .cover__title {
-    margin: 195px auto 0 auto;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .cover__title {
-    margin: 245px auto 0 auto;
   }
 }
