--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,50 +1,24 @@
 .cover {
-width: 100%;
-position: relative;
-margin: 66px 0 0 0;
-padding: 0;
-display: flex;
-flex-direction: column;
-justify-content: center;
-background-image: url(../../images/cover-trains.jpg);
-background-size: cover;
-background-position: center;
-z-index: 1;
-}
-
-.cover::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  background-color: #000;
-  opacity: 0.3;
-  transition: opacity 350ms ease;
-}
-
-.cover:hover::before {
-  opacity: 0.8;
+  margin: 0;
+  padding: 0 0 64px 0;
 }
 
 @media screen and (min-width: 768px) {
   .cover {
-    margin: 90px 0 0 0;
+    padding: 0 0 88px 0;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .cover {
-    margin: 92px 0 0 0;
+    padding: 0 0 92px 0;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .cover {
-    margin: 92px 48px 0 48px;
+    margin: 0 auto;
     max-width: 1184px;
-    height: 740px;
+    padding: 0 48px 92px 48px;
   }
 }
