--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,21 +1,29 @@
 .footer {
-  margin: 64px auto 24px 16px;
-  padding: 0;
+  margin: 0;
+  padding: 0 0 24px 16px;
   display: flex;
   flex-direction: column;
 }
 
 @media screen and (min-width: 768px) {
   .footer {
-    margin: 88px 24px 24px 24px;
-    padding: 0;
+    padding: 0 24px 24px 24px;
     flex-direction: row;
     justify-content: space-between;
+    max-height: 18px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .footer {
-    margin: 92px 48px 24px 48px;
+    padding: 0 48px 24px 48px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    max-width: 1184px;
+    margin: 0 auto;
+    padding: 0 0 24px 0;
   }
 }
