--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,25 +1,31 @@
 .header {
+  width: calc(100% - 32px);
+  max-height: 52px;
   margin: 0;
   padding: 16px 16px 48px 16px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
   
 @media screen and (min-width: 768px) {
   .header {
     padding: 28px 24px 48px 24px;
+    width: calc(100% - 48px);
   }
 }
   
 @media screen and (min-width: 1024px) {
   .header {
     padding: 28px 48px 48px 48px;
+    width: calc(100% - 96px);
   }
 }
 
 @media screen and (min-width: 1280px) {
   .header {
+    margin: 0 auto;
     padding: 28px 48px 56px 48px;
+    max-width: 1184px;
   }
 }
