--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,13 +3,12 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 163%;
-  text-align: left;
   margin: 40px 0 34px 0;
   padding: 0;
 }
 
 @media screen and (min-width: 768px) {
   .intro__text {
-    margin-bottom: 33px;
+    margin: 40px 0 33px 0;
   }
 }
