--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,6 @@
 .lead__caption {
-  margin: 0 auto 0 16px;
+  margin: 8px 0 0 16px;
+  padding: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
@@ -10,12 +11,18 @@
 
 @media screen and (min-width: 768px) {
   .lead__caption {
-    margin-left: 24px;
+    margin: 8px 0 0 24px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .lead__caption {
-    margin-left: 0;
+    margin: 8px 0 0 0;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead__caption {
+    margin: 8px 0 0 0;
   }
 }
