--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,5 @@
 .lead__subtitle {
-  max-width: 288px;
-  margin: 16px auto 0 auto;
+  margin: 16px 16px 0 16px;
   padding: 0;
   font-style: normal;
   font-weight: normal;
@@ -11,9 +10,20 @@
   
 @media screen and (min-width: 768px) {
   .lead__subtitle {
-    margin-top: 32px;
-    max-width: 640px;
+    margin: 32px 64px 0 64px;
     font-size: 30px;
     line-height: 36px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .lead__subtitle {
+    margin: 32px 144px 0 144px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead__subtitle {
+    margin: 32px 172px 0 172px;
   }
 }
