--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,5 @@
 .lead__title {
-  max-width: 288px;
-  margin: 0 auto 0 auto;
+  margin: 0 16px;
   padding: 0;
   font-style: normal;
   font-weight: 900;
@@ -11,8 +10,26 @@
   
 @media screen and (min-width: 768px) {
   .lead__title {
+    margin: 0 24px;
     font-size: 96px;
     line-height: 100px;
-    max-width: 720px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .lead__title {
+    margin: 0 104px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .lead__title {
+    margin: 0 104px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead__title {
+    margin: 0 132px;
   }
 }
