--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,7 +1,4 @@
 .lead {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 0;
   padding: 0 0 64px 0;
 }
@@ -20,6 +17,8 @@
 
 @media screen and (min-width: 1280px) {
   .lead {
+    margin: 0 auto;
     padding: 0 148px 92px 148px;
+    max-width: 984px;
   }
 }
