--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,7 +1,4 @@
 .photo-grid__item {
   width: 100%;
-  height: auto;
-  margin: 0;
-  padding: 0;
-  object-fit: contain;
+  object-fit: cover;
   }
