--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,17 +1,14 @@
 .photo-grid {
   margin: 0;
-  padding: 0 16px;
+  padding: 0 16px 0 16px;
   display: grid;
-  justify-content: start;
-  align-content: start;
   grid-template-columns: repeat(1, 1fr);
-  grid-auto-flow: row;
   gap: 12px;
 }
-    
+
 @media screen and (min-width: 768px) {
   .photo-grid {
-    padding: 0 24px;
+    padding: 0 24px 0 24px;
     grid-template-columns: repeat(2, 1fr);
     gap: 16px;
   }
@@ -19,7 +16,7 @@
     
 @media screen and (min-width: 1024px) {
   .photo-grid {
-    padding: 0 48px;
+    padding: 0 48px 0 48px;
     grid-template-columns: repeat(3, 1fr);
     gap: 14px;
   }
@@ -27,7 +24,8 @@
   
 @media screen and (min-width: 1280px) {
   .photo-grid {
-    padding: 0 48px;
+    max-width: 1184px;
+    margin: 0 auto;
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
   }
