--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -11,6 +11,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    grid-area: "place__url-heading";
+    grid-area: "place__website";
   }
 }
