--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,17 +1,11 @@
 .place {
-  margin: 0 0 50px 0;
-  padding: 0;
   display: grid;
-  -webkit-font-smoothing: antialiased;
-}
-
-.place:last-of-type {
-  margin-bottom: 0;
+  margin: 0;
+  padding: 0;
 }
   
 @media screen and (min-width: 768px) {
   .place {
-    margin-bottom: 73px;
     display: grid;
     grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
     grid-template-columns: minmax(340px, 1fr) minmax(352px, 1fr);
@@ -24,7 +18,6 @@
   
 @media screen and (min-width: 1024px) {
   .place {
-    margin-bottom: 80px;
     display: grid;
     grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
     grid-template-columns: minmax(440px, 1fr) minmax(456px, 1fr);
