--- a/blocks/cover/__overley/cover__overley.css
+++ b/blocks/cover/__overley/cover__overley.css
@@ -1,7 +1,7 @@
 .cover__overley {
   position: relative;
   width: 100%;
-  min-height: 200px;
+  min-height: 62.5vw;
   display: flex;
   flex-direction: column;
   align-items: center;
